# claude-code-python

./: .env  .env.example  FINAL_FIX_SUMMARY.md  FIX_SUMMARY.md  README.md  README_CHAT.md  USAGE.md  detailed_result.txt  final_test.py  minimal_test.py  pyproject.toml  requirements.txt  restart_chat_server.bat  setup.py  simple_test.py  start_chat.py  start_chat_old.py  start_with_memory_fix.py  test_5_rounds.py  test_agent_debug.py  test_agent_fix.py  test_agent_fix_simple.py  test_chat.py  test_create_dir.py  test_create_dir_simple.py  test_date_issue.py  test_dependency_fix.py  test_detailed.py  test_e2e.py  test_file_location.py  test_final_optimization.py  test_final_verification.py  test_fix_max_drawdown.py  test_format_fix.py  test_import.py  test_memory.json  test_memory_client.py  test_memory_debug.py  test_memory_final.py  test_memory_fixed.py  (+17 more)
chat_memory/: conversation_session_1776043332808_7yb6611ds.json  session_session_1776043332808_7yb6611ds.json
examples/: agent_memory.json  basic_usage.py  chat_demo.py  simple_demo.py  test_memory.json
src/: __init__.py  agent_executor.py  chat_memory.py  chat_server.py  config.py  main.py  skill_manager.py  state_manager.py  task_parser.py  tool_manager.py
src/memory/: __init__.py  compressor.py  directive_detector.py  entity_tracker.py  formatter.py  learner.py  manager.py  model_entity_extractor.py  smart_compressor.py  smart_entity_tracker.py  types.py
src/skills/: __init__.py
tests/: test_config.py
