[project]
name = "devops-agent"
version = "0.1.0"
description = "基于Python的智能代理系统，通过自然语言调用MCP工具完成代码开发和运维任务"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Claude AI Assistant", email = "noreply@anthropic.com"}
]
keywords = ["ai", "agent", "devops", "mcp", "automation", "llm"]

dependencies = [
    "langchain-openai>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.30",
    "mcp>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "flake8>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/devops-agent"
"Bug Tracker" = "https://github.com/yourusername/devops-agent/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"